--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,31 @@
 <resources>
 
     <string name="app_name">FlMML</string>
+
+    <!-- MainActivity -->
+    <string name="sample_mml"><![CDATA[L8 O5CDEFGAB<C]]></string>
+    <string name="default_url">http://</string>
+    <string name="how_to_download">\n Playボタン長押しでURL指定してMMLを読み込めます</string>
+    <string name="failed_to_download">\n Failed to Download.</string>
+    <string name="downloading">\n Downloading : %1$s</string>
+    <string name="play">Play</string>
+    <string name="pause">Pause</string>
+    <string name="stop">Stop</string>
+    <string name="compiling">Compiling</string>
+    <string name="out_of_memory_initialization">メモリ確保に失敗しました</string>
+    <string name="out_of_memory_compile">メモリが足りません!!</string>
+    <string name="enter_url">URLを入力してください</string>
+    <string name="download">取得する</string>
+    <string name="cancel">キャンセル</string>
+    <string name="toast_succeed">Succeed</string>
+    <string name="toast_failed">Failed</string>
+
+    <!-- SettingActivity -->
     <string name="setting">Setting</string>
-    <string name="license">"
-Copyright (c) 2007, Takeshi OKUBO
-All rights reserved.
-
-Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
-
-* Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
-
-* Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
-
-* Neither the name of FlMML Production Committee nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
-
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE."</string>
+    <string name="setting_output">出力(次回再生時から反映されます)</string>
+    <string name="output_8bit">8bit (非推奨)</string>
+    <string name="output_16bit">16bit</string>
+    <string name="output_float">32bit-float (Flash版と同じ・Lollipop以降のみ対応)</string>
+    <string name="thanks">このアプリのほとんどは修正BSDライセンスで公開されているFlMMLのプログラムを参考に作られています。</string>
 
 </resources>
